# hybrid-element-retriever

./: .coveragerc  .flake8  .gitignore  ALL_REAL_ISSUES.md  CDP_ANALYSIS_REPORT.md  CHANGELOG.md  CI_README.md  COMPONENTS_MATRIX.md  COMPONENT_MAP.md  COMPREHENSIVE_SELF_CRITIQUE.md  COMPREHENSIVE_VERIZON_ANALYSIS.md  CONTRIBUTING.md  CRITICAL_ISSUES_SUMMARY.md  CROSS_PLATFORM_SETUP_SUMMARY.md  DOCUMENTATION_CLEANUP_SUMMARY.md  EFFICIENCY_ACCURACY_COMPARISON.md  ENHANCED_FIXES_SELF_CRITIQUE.md  ENHANCED_IMPLEMENTATION_CRITIQUE.md  ENHANCED_IMPLEMENTATION_SUMMARY.md  ENHANCED_NO_SEMANTIC_IMPLEMENTATION_SUMMARY.md  ENV_CONFIGURATION.md  EXECUTION_FLOW_ANALYSIS.md  EXECUTION_FLOW_DIAGRAM.txt  EXECUTION_FLOW_SUMMARY.md  EXECUTION_GUIDE.md  EXPLICIT_NO_SEMANTIC_SELF_CRITIQUE.md  FILE_ITERATION_LOG.md  FILE_USAGE_REPORT.md  FINAL_AUDIT_REPORT.md  FINAL_CHECKLIST.md  FINAL_COMPONENT_STATUS.md  FINAL_FIXES_SUMMARY.md  FINAL_NLP_FIX_VERIFICATION.md  FINAL_PRODUCTION_REVIEW.md  FINAL_PROJECT_STATUS.md  FINAL_SELF_CRITIQUE_REPORT.md  FINAL_STATUS.md  FINAL_VALIDATION_COMPLETE.md  FINAL_VALIDATION_REPORT.md  FUNCTIONAL_REPORT.md  (+235 more)
.github/workflows/: ci-simple.yml  ci.yml
ARCHIVE/docs/: COMPLEX_SCENARIOS_GUIDE.md  DIAGRAMS.md
ARCHIVE/her_remaining/: INSTALLABILITY_REPORT.md  SCORING_NOTES.md  SELFCRITIQUE_PASS_1.md  SELFCRITIQUE_PASS_2.md  requirements.txt  test_basic.py
ARCHIVE/her_src_conflicts/: __init__.py  cli.py  cli_api.py
ARCHIVE/reports/: COVERAGE_REPORT.md  FINAL_REAL_ANALYSIS.md  FINAL_SELF_CRITIQUE.md  INTEGRITY_CHECK.md  PRODUCTION_CHECKLIST.md  SELF_CRITIQUE_FINAL.md
ARCHIVE/root_tests/: test_complex_features.py  test_complex_html_xpath.py  test_debug_phone.py  test_direct_score.py  test_final_component_analysis.py  test_final_fix.py  test_final_verification.py  test_phone_fresh.py  test_scoring_detail.py
ARCHIVE/src/: pipeline_v2.py  sqlite_cache_old.py
ARCHIVE/validation_scripts/: example_usage.py  final_brutal_critique.py  final_brutal_test.py  fix_all_issues.py  fix_failures.py  verify_fixes.py
archive/: DOCS_INDEX.md  FUNCTIONAL_REPORT.md
ci/: github-actions.yml
config/: .env.example  setup.cfg
debug/: debug_markuplm.py  debug_simple.py  find_phones_link.py
docs/: ARCHITECTURE.md  COMPLEX_SCENARIOS_GUIDE.md  DIAGRAMS.md  FEATURE_TOGGLE.md  README.md  README_SETUP.md  SETUP_GUIDE.md
docs/development/: dependency-analysis.md  migration-guide.md
docs/guides/: environment-configuration.md  hierarchy-enhancement.md
docs/history/: breakage-analysis.md  reorganization-summary.md
docs/setup/: SETUP.md
examples/: advanced_features.py  basic_usage.py  complex_scenarios_demo.py  demo.py  elements_sample.json
examples/edge_cases/: cold_start.html  cold_start_test.json  incremental_update.html  overlay_popup.html  spa_route_change.html  test_runner.py
functional_harness/: FUNCTIONAL_REPORT.md  fixture.html  functional_results.json  ground_truth.json  intents.json
functional_harness/01_products_disambiguation/: fixture.html  ground_truth.json  intents.json
functional_harness/02_forms/: fixture.html  ground_truth.json  intents.json
functional_harness/03_overlays_spinners/: fixture.html  ground_truth.json  intents.json
functional_harness/auth/: auth.html  ground_truth.json  intents.json
functional_harness/dynamic/: dynamic.html
functional_harness/forms/: form.html  ground_truth.json  intents.json
functional_harness/frames/: frames.html
functional_harness/i18n/: i18n.html
functional_harness/icons/: icons.html
functional_harness/large_dom/: large.html
functional_harness/overlays/: overlays.html
functional_harness/products/: ground_truth.json  intents.json  products.html
functional_harness/spa/: ground_truth.json  spa.html
functional_harness/widgets/: widgets.html
her/: COMPONENTS_MATRIX.md  FILE_ITERATION_LOG.md  README.md  pyproject.toml  setup.py  test_imports.py
her/functional_harness/fixtures/: products_disambiguation.html  products_disambiguation.json
her/scripts/: install_models.ps1  install_models.sh
her/src/her/: __init__.py  cli.py  cli_api.py
her/src/her/bridge/: snapshot.py
her/src/her/embeddings/: _resolve.py  element_embedder.py  query_embedder.py
her/src/her/executor/: actions.py  session.py
her/src/her/locator/: synthesize.py  verify.py
her/src/her/models/: MODEL_INFO.json
her/src/her/rank/: fusion.py
her/src/her/recovery/: promotion.py  self_heal.py
her/src/her/vectordb/: sqlite_cache.py
java/: pom.xml
organized/: CLEANUP_SUMMARY.md  FINAL_SUMMARY.md  PROJECT_ORGANIZATION.md  QUICK_REFERENCE.md
reports/: step1_changes.md  step1_selfcritique_after.md  step1_selfcritique_before.md  step2_changes.md  step2_selfcritique_after.md  step2_selfcritique_before.md
samples/: test_complex.html
scripts/: dev_setup.ps1  dev_setup.sh  doctor.py  dom_extractor.js  init_dbs.ps1  init_dbs.sh  install_models.ps1  install_models.sh  mock_probe.py  preflight.py  profile_runs.py  run_functional_validation.py  run_gemma_snippet.py  smoke_run.py  verify_parts.py  verify_project.ps1  verify_project.sh
src/her/: actions.py  (+29 more)
tests/: README.md  README_English_Automation.md  README_Universal_Automation.md  conftest.py  debug_apple_page.py  debug_iphone_elements.py  english_automation_framework.py  natural_language_test.py  natural_test_runner.py  optimized_verizon_test.py  run_universal_tests.py  run_verizon_test.py  setup_automation_framework.py  simple_optimized_test.py  test_all_components.py  test_all_fixes.py  test_basic.py  test_bridge.py  test_bridge_mapping.py  test_cache_sanity.py  test_cli_api.py  test_cli_contract.py  test_cli_coverage.py  test_complete_verizon_flow.py  test_complex_features.py  test_complex_scenarios.py  test_comprehensive_validation.py  test_corpus_complex.py  test_coverage_boost.py  test_debug_apple_filter.py  test_debug_flow.py  test_descriptors.py  test_dom_uniqueness.py  test_e2e_demo.py  test_edge_cases.py  test_edge_cases_real.py  test_element_selection.py  test_embeddings.py  test_enhanced_modes.py  test_examples.py  (+63 more)
tools/: check_dependencies.py  load_env.py  test_env.py
(+297 files in other folders)
