[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "her"
version = "0.1.0"
description = "Hybrid Element Retriever (HER)"
readme = "README.md"
requires-python = "==3.12.*"
authors = [{ name = "HER Maintainers", email = "maintainers@example.com" }]
license = { text = "MIT" }
keywords = ["hybrid", "retrieval", "automation", "embeddings", "onnx"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

# Keep core small; heavy/optional stuff lives under extras below.
dependencies = [
  "numpy>=1.24",
  "pydantic==1.10.12",
  "playwright>=1.45",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=24.0",
  "flake8>=6.0",
  "mypy>=1.6",
  "types-requests==2.31.0.4",
  # Helpful for Playwright tests:
  "playwright>=1.45",
]
java = [
  "py4j==0.10.9.7",
]

[project.scripts]
her = "her.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["her*"]

[tool.setuptools.package-data]
her = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.flake8]
max-line-length = 100https://github.com/abhilashMirupati/hybrid-element-retriever/blob/main/pyproject.toml
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src/her"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
