[metadata]
name = hybrid-element-retriever
version = 0.1.0
description = A hybrid framework for translating natural language steps into robust UI actions using automatic indexing and semantic retrieval.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
license = MIT
license_file = LICENSE
url = https://example.com

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    playwright>=1.39.0
    numpy>=1.23.5
    pydantic>=1.10.12

[options.package_data]
* = *.pyi, py.typed

[options.entry_points]
console_scripts =
    her = her.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,.venv

[mypy]
python_version = 3.9
strict = True
ignore_missing_imports = True

[tool:black]
line-length = 88
target-version = ['py39']
