[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "her"
version = "1.0.0"
description = "Hybrid Element Retriever - Production-ready web element location framework"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "HER Team"}]
keywords = ["web", "automation", "testing", "element", "locator", "ai", "embeddings"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"